# util

bash/: .bash_aliases
bash/ammend_log/: ammend_log.sh  macro.ahk
c/scripts/: cboilerplate.sh
cpp/scripts/: cppboilerplate.sh
cpp/scripts/example_dir/: CMakeLists.txt
cpp/scripts/example_dir/app/: main.cpp
make/: Makefile
python/NaryTree/: NaryTree.py
python/grid_gen/: gen_square_grid.py
vim/: .vimrc
vim/commands/: remove-ansi-colours.txt
